# FreeLytics

./: .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  FreeLytics.cfg  README.md  analyze_data.py  docker-compose.prod.yml  docker-compose.yml  init-multiple-databases.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
JobOfferCleaner/: CSVLoader.py  DataframeCleaner.py
JobOfferCleaner/tests/: tests_csv_load.py  tests_dataframe_cleaner.py
airflow/dags/: daily_scraping_pipeline.py
dlt_pipelines/: scraping_pipeline.py
dlt_pipelines/.dlt/: .sources  config.toml  secrets.toml
scraper/scrapy_freework/: Makefile  pytest.ini  settings_rate_limit.py
scraper/scrapy_freework/scrapy_freework/: items.py  middlewares.py  pipelines.py  settings.py
scraper/scrapy_freework/scrapy_freework/spiders/: freework_spider.py
scraper/scrapy_freework/tests/: test_config.py  test_data_processing.py  test_integration.py  test_parsing.py
scraper/tests/: tests.py
scripts/: start-dev.sh  start-prod.sh  stop.sh
src/job_offer_analyzer/: DataframeAnalyzer.py
src/job_offer_cleaner/: DataframeCleaner.py
src/scrapy_freework/: README.md  requirements-test.txt  scrapy.cfg  settings_rate_limit.py
src/scrapy_freework/scrapy_freework/: settings.py
tests/: conftest.py  test_config.py  test_daily_scraping_dag.py  test_data_processing.py  test_dataframe_analyzer.py  test_dataframe_cleaner.py  test_parsing.py  tests_csv_load.py  tests_dataframe_cleaner.py.bak
tests/fixtures/: job_detail_full.html  test_config.cfg
(+3 files in other folders)
