[project]
name = "freelytics"
version = "0.1.0"
description = "FreeLytics job scraper for freelance data analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.0",
    "configparser",
    "pathlib",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "isort>=5.10.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper/scrapy_freework"]

[tool.pytest.ini_options]
testpaths = ["scraper/scrapy_freework/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
